<resources>
    <string name="app_name">Lightning Driver</string>
    <string name="log_in_to_existing_account">Log in to existing account</string>
    <string name="welcome_to_lightning_for_driver">Welcome to Lightning for driver!</string>
    <string name="create_new_account">Create new account</string>
    <string name="switch_to_signup">Not have account? Tap here to create one!</string>
    <string name="your_password">Your password</string>
    <string name="your_email">Your email</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="welcome">Welcome to Lightning!</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in to existing account</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="tap_to_upload_your_image">Tap to upload your Image</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="switch_to_login">Already have an account? Tap here to Log in!</string>
    <string name="lightning">Lightning</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="your_password_again">Your password again</string>
    <string name="vehicle_registration">Vehicle registration</string>
    <string name="tap_to_upload_your_vehicle_s_image">Tap to upload your vehicle\'s Image</string>
    <string name="motorbike">Motorbike</string>
    <string name="car">Car</string>
    <string name="your_vehicle_s_name">Your vehicle\'s name</string>
    <string name="plateNumber">Your vehicle\'s plate number</string>
    <string name="confirm_your_registration">Confirm your registration</string>
    <string name="select_your_vehicle_type">Select your vehicle type:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>