<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.WelcomeActivity">

    <ImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:src="@drawable/lightning_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:id="@+id/imgLogo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogo"
        android:id="@+id/textWelcome"
        android:text="@string/welcome_to_lightning_for_driver"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textWelcome"
        android:background="@drawable/button_background"
        android:id="@+id/buttonLogin"
        android:layout_marginHorizontal="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/log_in_to_existing_account"
        android:textAllCaps="false"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_below="@id/buttonLogin"
        android:background="@drawable/button_background"
        android:id="@+id/buttonSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/create_new_account"
        android:textAllCaps="false"
        android:textColor="@color/white"/>



</RelativeLayout>